COFFEESCRIPT ALL THE THINGS

--- a/src/index.html
+++ b/src/index.html
@@ -66,11 +66,12 @@
     <!-- build:js({.tmp,src}) scripts/app.js -->
     <!-- inject:js -->
     <script src="app/index.js"></script>
+    <script src="app/main/main.controller.js"></script>
     <script src="components/progress/progress.directive.js"></script>
     <script src="components/navbar/navbar.controller.js"></script>
     <script src="components/freespace/freespace.directive.js"></script>
     <script src="components/filters/filters.directive.js"></script>
-    <script src="app/main/main.controller.js"></script>
+    <script src="app/atom.js"></script>
     <!-- endinject -->
 
     <!-- inject:partials -->
